RC_SET/2_dots_arrays_c_disorder_high_v/increasing_r_2_1.out

python3 dots_array.py -M 2 -N 1 --vmin 0 --vmax 30 --vstep 0.1 --vr 0 --vg-avg 0 --vg-std 0 --c-avg 1 --c-std 0.5 --cg-avg 10 --cg-std 0 --r-avg 10 --r-std 0 --rg-avg 1000 --rg-std 0 --repeats 20 --n-avg 0 --n-std 0 --q-avg 0 --q-std 0 --distribution uniform --custom-rh "[[1,10],[1,10]" --custom-rv "[[1]]" --file-name increasing_r_2_1 -o 2_dots_arrays_c_disorder_high_v --full  

Traceback (most recent call last):
  File "dots_array.py", line 1250, in <module>
    Rh = literal_eval(options.custom_rh.replace('\"',''))
  File "/usr/local/anaconda3/lib/python3.7/ast.py", line 46, in literal_eval
    node_or_string = parse(node_or_string, mode='eval')
  File "/usr/local/anaconda3/lib/python3.7/ast.py", line 35, in parse
    return compile(source, filename, mode, PyCF_ONLY_AST)
  File "<unknown>", line 1
    [[1,10],[1,10]
                 ^
SyntaxError: unexpected EOF while parsing
